Thu May 25 19:02:52 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Container_Base.cpp(ciao_install_home):

          Changed the single-step reinterpret_cast of the component
          DLL entry points to be a two-step process: first to the
          integer type 'ptrdiff_t' then to the desired pointer-to-
          function type. A single cast won't work because casting
          from pointer-to-object (even void*) to pointer-to-function
          directly is not allowed in C++.

Thu May 25 11:50:39 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ciao/Container_Base.cpp:
          Replace the use of static_cast in ciao_install_home with
          reinterpret_cast since void* sources are involved.

Wed May 24 17:35:53 UTC 2006  Nanbor Wang  <nanbor@exothermic.txcorp.com>

        * examples/Display/RateGen/RateGen.mpc: Fixed the project
          dependency for controller.

Tue May 23 22:46:58 UTC 2006  jiang,shanshan <shanshan.jiang@vanderbilt.edu>

        * DAnCE/RepositoryManager/Options.cpp
        * DAnCE/RepositoryManager/Options.h
        * DAnCE/RepositoryManager/RMadmin.cpp
        * DAnCE/RepositoryManager/RepositoryManager_Impl.h
        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp
        * DAnCE/RepositoryManager/RepositoryManager.cpp

          Added the code to save the state of the RepoMan at exit and
          load the state of it at start.

Tue May 23 14:31:11 UTC 2006  jiang,shanshan <shanshan.jiang@vanderbilt.edu>

        * DAnCE/RepositoryManager/Options.cpp
        * DAnCE/RepositoryManager/Options.h
        * DAnCE/RepositoryManager/RMadmin.cpp
        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp
        * DAnCE/RepositoryManager/RepositoryManager.cpp

          Added the naming service & the implementation of createPackage
          function to RepoMan.

Mon May 22 18:49:14 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Container_Base.cpp(ciao_install_home):
